--- a/estilo/style.css
+++ b/estilo/style.css
@@ -60,7 +60,7 @@ header {
         padding-right: 10px;
         padding-left: 10px;
         margin: auto;
-        margin-bottom: 30px;
+        padding-bottom: 30px;
         text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.459);
     }
 
