--- a/estilo/style.css
+++ b/estilo/style.css
@@ -28,10 +28,7 @@
 
 
 body {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
+    
     background-color: var(--cor0);
     font-family: var(--fonte-padrao);
 }
@@ -69,14 +66,17 @@ header {
     }
 
 nav {
+    display: flex;
     background-color: var(--cor5) ;
     padding: 10px;
     box-shadow: 0px 7px 7px #00000024;
+    
 }
 
     nav > a {
         color: white;
-        padding: 10px;
+        margin-left: 30px;
+        padding: 10px 45px;
         border-radius: 5px;
         text-decoration: none;
         font-weight: bold;
